# limit-order-book

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: matching.rs
examples/: commands_price_time.json
migrations/: 20260101000001_init.sql
src/: lib.rs  main.rs
src/book/: mod.rs
src/cli/: mod.rs
src/matching/: mod.rs
src/orders/: mod.rs
src/persistence/: events.rs  mod.rs  postgres.rs
src/replay/: mod.rs
src/trades/: mod.rs
tests/: matching_tests.rs  postgres_integration.rs  proptest_book.rs  replay_tests.rs  stress.rs
tests/bdd/: behave.ini
tests/bdd/features/: environment.py  price_time_priority.feature
tests/bdd/features/steps/: __init__.py  priority_steps.py
