[package]
name = "lob-engine"
version = "0.1.0"
edition = "2021"
description = "Low-latency limit order book matching engine"
license = "MIT"
readme = "README.md"
default-run = "lob-engine"

[[bin]]
name = "lob-engine"
path = "src/main.rs"

[lib]
name = "lob_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3"

[[bench]]
name = "matching"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
